Update homepage again

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,16 @@
 ---
-
+// 這是一個可以寫伺服器端 JavaScript 的區域，我們稍後會用到。
 ---
-
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+<html lang="zh-TW">
+<head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>朋洋映像國際娛樂股份有限公司</title>
+</head>
+<body>
+    <h1>朋洋映像</h1>
+    <p>光影敘事，成就品牌。透過映像記錄生活。</p>
+</body>
 </html>
